Version 2.0. Global update